--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,9 @@
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/auth-db
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-specific-password 
+MONGODB_URI=mongodb+srv://resumesbyhirely:resumesbyhirely%40244@resumesbyhirely.c6iw5.mongodb.net/?retryWrites=true&w=majority&appName=resumesbyhirely
+JWT_SECRET=your_jwt_secret_key
+EMAIL_USER=resumesbyhirely@gmail.com
+EMAIL_PASS=ulzsjqbtlrclwqgx
+GOOGLE_CLIENT_ID=134474658129-mb4b56bfc9a4i3njtl6hnb6kavufrd3f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GITHUB_CLIENT_ID=Ov23liAZSzQrCtKCEjo1
+GITHUB_CLIENT_SECRET=534a93a6ebf1f9b9d16ddee3faa1fe4425583f51 
+PORT = 5000
